# hell

./: .gitignore  Cargo.toml  README.txt  aliases.js  cargo  deploy.sh  search-index.js  source-files.js  test.sh
1/: README.txt  memo.txt  player-interface.txt
10/: README.txt
11/: api.txt  test  xste4
11/evolution/evolution-ui/: Cargo.toml
11/evolution/evolution-ui/src/: dealer_widget.rs
12/: README.txt  main  remote.txt  xsilly
13/: client  compile  server
2/: README.txt  player.rb
2/take5/take5-cli/: Cargo.toml
2/take5/take5-cli/src/: args.rs
3/: README.txt  player-protocol.txt
3/take5/take5-remote/: Cargo.toml
3/take5/take5-remote/src/: lib.rs  player_proxy.rs
3/take5/take5-remote/src/starting_hand/: de.rs
5/: README.txt  player-interface.txt  xattack
6/: README.txt  compile  feed.md  test
6/feeding/: Cargo.toml
6/feeding/evolution-test/: Cargo.toml
6/feeding/evolution-wire/src/: feed_choice.rs  species.rs
6/feeding/evolution-wire/src/remote/: choose.rs
6/feeding/evolution-wire/tests/src/remote/: start.rs
6/feeding/src/game/context/: mod.rs  species.rs
6/feeding/src/silly/: feed.rs
6/feeding/tests/feeding_json/: 1073-6112-5-in.json  2657-7498-14-in.json  7469-3561-4-in.json  matthias-13-in.json
7/: README.txt  xfeed
7/feeding/evolution-wire/: Cargo.toml
7/feeding/evolution-wire/src/: food_value.rs
7/feeding/evolution-wire/src/remote/: mod.rs  start.rs
7/feeding/evolution-wire/tests/src/: gp.rs
8/: README.txt  compile  xstep
9/: README.txt  compile  xgui
cs4500/: all.html  index.html
evolution/: all.html  index.html  log.stderr  log.stdout  macro.debug_expr!.html  macro.debug_expr.html  macro.test_harness.html  run.sh  sidebar-items.js
evolution_logger/: all.html  index.html  sidebar-items.js  struct.Logger.html
evolution_wire/: BT.t.html  FoodValue.t.html  FromWire.t.html  LOP.t.html  LOT.t.html  Nat.t.html  NatPlus.t.html  NaturalPlus.t.html  StartRound.t.html  ToWire.t.html  all.html  enum.Either.html  enum.FeedChoice.html  enum.Trait.html  index.html  sidebar-items.js  struct.Action4.html  struct.BT.html  struct.Choice.html  struct.Configuration.html  struct.Feeding.html  struct.FoodValue.html  struct.GB.html  struct.GP.html  struct.Integer.html  struct.LOT.html  struct.Nat.html  struct.NatPlus.html  struct.Natural.html  struct.NaturalPlus.html  struct.Player.html  struct.RT.html  struct.Situation.html  struct.Species.html  struct.SpeciesCard.html  struct.StartRound.html  trait.FromWire.html  trait.ToWire.html  type.LOC.html  type.LOP.html  (+2 more)
itertools/: all.html  enum.Diff.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.MinMaxResult.html  enum.Partition.html  fn.assert_equal.html  fn.diff_with.html  fn.equal.html  fn.linspace.html  fn.partition.html  index.html  macro.iproduct.html  macro.izip.html  sidebar-items.js  struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.ChunksLazy.html  struct.Coalesce.html  struct.Combinations.html  struct.CombinationsN.html  struct.Dedup.html  struct.Flatten.html  struct.Format.html  struct.FormatDefault.html  struct.Group.html  struct.GroupBy.html  struct.GroupByLazy.html  struct.Groups.html  struct.ISlice.html  struct.Interleave.html  (+30 more)
(+2486 files in other folders)
