[package]
name = "cs4500"
version = "0.1.0"
authors = [
    "Nathan Lilienthal <nathan@nixpulvis.com>",
    "Steve Troetti <workstroetti@gmail.com>",
    "Alex Jo <jo.al@husky.neu.edu>",
]

# [dependencies.take5]
# path = "take5"
#
# [dependencies.take5-cli]
# path = "take5/take5-cli"
#
# [dependencies.take5-ext]
# path = "take5/take5-ext"
#
# [dependencies.take5-remote]
# path = "take5/take5-remote"

[dependencies.evolution]
path = "evolution"
