[package]
name = "take5-cli"
version = "0.2.0"
authors = [
    "Nathan Lilienthal <nathan@nixpulvis.com>",
    "Alex Jo <jo.al@husky.neu.edu>",
]

[dependencies]
rustc-serialize = "0.3"
docopt = "0.6"

[dependencies.take5]
path = "../"

[dependencies.take5-ext]
path = "../take5-ext"
optional = true

[features]
default = ["ext"]
ext = ["take5-ext"]
